auth middleware, better init, format
